# continue_and_python_template

./: .gitignore  .pre-commit-config.yaml  README.md  fix_patch_parser.patch  pyproject.toml
.github/workflows/: fast-check.yml
docs/: ENCODING_DRILL.md  GET_HELP.md  MODES.md  TEMPLATE_CHECKLIST.md  TODO.md  TODO_HISTORY.md
docs/continue/: README.md
docs/continue/prompts/: commit_message.md  refactor_extract_function.md  write_tests.md
docs/continue/rules/: builder.md  starter.md
docs/prompts/: fizzbuzz.txt
scripts/: CnApply.Config.psd1  CnApply.Lib.psm1  check.ps1  clean.ps1  clean_git_artifacts.ps1  cn_apply.ps1  continue_pulse.ps1  doctor.ps1  fix_docs_utf8.ps1  init_template_folders.ps1  ollama_dial_tone.ps1  precommit.ps1  setup_gitignore.ps1  setup_precommit.ps1  template_hard_reset.ps1
scripts/cnapply/: _selftest_patch.ps1  git.ps1  io.ps1  logging.ps1  native.ps1  orchestrator.ps1  patch.ps1  prompt.ps1  repocheck.ps1
tools/: repo_doctor.py
