[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "python-template"
version = "0.1.0"
description = "Python-first, polyglot-ready repository template with clean-code guardrails."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [{ name = "Jeremy Evert" }]
dependencies = []

[project.optional-dependencies]
dev = [
  "ruff>=0.6.0",
  "pytest>=8.0.0",
  "pre-commit>=3.0.0",
  "rich>=13.0.0",
]

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 88
target-version = "py310"
extend-exclude = [
  "runs",
  "reports",
]

[tool.ruff.lint]
# Solid baseline: errors, unused stuff, import sorting, modernize, bugbear.
select = ["E", "F", "I", "UP", "B"]
ignore = []

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
